--- a/vue_basic/01_初识vue/初始vue.html
+++ b/vue_basic/01_初识vue/初始vue.html
@@ -36,11 +36,10 @@
  -->
 
 
-    <!-- 准备好一个容器 -->
+    <!-- 准备好一个容器 也叫做模板-->
     <div id="root">
         <!-- {{}} 表示插值操作 -->
         <h1>Hello,{{name.toUpperCase()}},{{Date.now()}}</h1>
-
     </div>
 
     <script type="text/javascript">
