--- a/vue_basic/06_数据代理/1.回顾Object.defineProperty方法.html
+++ b/vue_basic/06_数据代理/1.回顾Object.defineProperty方法.html
@@ -19,6 +19,7 @@
             sex: '男'
             // age: 18
         }
+        //为对象添加属性
         Object.defineProperty(person, 'age', {
             // value: 18,
             // enumerable: true,   //控制属性是否可以枚举，默认值为false   age默认为灰色，表示age是不能被枚举的
