--- a/vue_basic/07_事件处理/3.键盘事件.html
+++ b/vue_basic/07_事件处理/3.键盘事件.html
@@ -31,7 +31,7 @@
     <!-- 准备好一个容器 -->
     <div id="root">
         <h2>你好</h2>
-        <!-- keyup是键盘松开后执行，keudown是键盘按下后执行 -->
+        <!-- keyup是键盘松开后执行，keydown是键盘按下后执行 -->
         <input type="text" @keyup.huice="showInfo">
         <!-- 系统组合键 -->
         <input type="text" @keyup.ctrl.y="showInfo">
